added display weather function to javascript

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sunny Days Weather Dashboard</title>
 </head>
 
 <body>
+
     <input type="text" id="userInput">
     <button id="submit-btn">
         Submit
     </button>
+
     <section id="currentWeather">
         <h1 id="city"></h1>
         <h2 id="date"></h2>
@@ -20,9 +22,10 @@
         <h3 id="wind"></h3>
         <h3 id="humidity"></h3>
     </section>
-    <section id="forecast5d">
 
-    </section>
+    <section id="forecast5d"></section>
+
+    <script src="https://unpkg.com/dayjs/dayjs.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 
