added innerHTML element to store city searches and created a function to clear them on refresh

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         Submit
     </button>
 
+    <section id="appendCitiesList">
+    </section>
+
     <section id="currentWeather">
         <h1 id="city"></h1>
         <h1 id="date"></h1>
